src/objects/sked_Client_Availability__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>sked_Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Finish__c</fullName>
        <label>Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Preferred_Finish__c</fullName>
        <label>Preferred Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Preferred_Start__c</fullName>
        <label>Preferred Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Recurring_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Schedule</label>
        <referenceTo>sked__Recurring_Schedule__c</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>sked_Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>sked_Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Template_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Entry</label>
        <referenceTo>sked__Availability_Template_Entry__c</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>sked_Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Availability</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Client Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>